# MatrixMultiplier

./: CMakeLists.txt  README.md  autor.md
docs/: dados.csv
include/: matrix_operations.h
src/: auxiliar.cpp  etapa2.cpp  parallel_processes.cpp  parallel_threads.cpp  sequential.cpp
